flux/production/networking.k8s.io-v1-Ingress-monitoring-metabase.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-secret: ingress-nginx/client-ca
    nginx.ingress.kubernetes.io/auth-tls-verify-client: 'on'
  name: metabase
  namespace: monitoring
spec:
  rules:
  - host: metabase.spack.io
    http:
      paths:
      - backend:
          service:
            name: metabase
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
  tls:
  - secretName: tls-metabase
